# DATA-TD

./: README.md
data-q1-Pipeline/: README.md
data-q2-text/: README.md  _sanitizer program.py  demo.txt
data-q3-SQL & contract/: README(documentation).md  load_data_to_bigquery.py  pyproject.toml
data-q3-SQL & contract/data/: product.csv  product_class.csv  sales_transaction.csv
data-q3-SQL & contract/sql/: top2_sales_by_class.sql
